added section gov in eng

--- a/eng.html
+++ b/eng.html
@@ -180,6 +180,20 @@
         </div>
       </div>
     </section>
+    <section class="mission">
+      <div class="mission-content coorp content">
+        <div class="text-section section">
+          <p class="title">Collaboration with<br>Transcarpathian Regional Council</p>
+          <p class="description">The corresponding memorandum of cooperation was just signed by the chairman of the regional council Volodymyr Chubirko and the president of the organization Bogdan Zabredovsky.The parties were competed by the deputy of the regional council Petro Stanko.The document refers to cooperation in the humanitarian field, conducting joint events, trainings and exercises, forums, etc...</p>
+          <a href="https://zakarpat-rada.gov.ua/zakarpatska-oblrada-spivpratsiuvatyme-z-ho-zakhyst-suspilstva-ukrainy/">
+            <div class="button button-bold disable learn-button"><b>Learn more</b></div>
+          </a>
+        </div>
+        <div class="image-section hand-section section">
+          <img class="houses" src="/images/coorperation-gov.png" alt="">
+        </div>
+      </div>
+    </section>
 
     <section class="mission">
       <div class="mission-content coorp content">
