--- a/ua.html
+++ b/ua.html
@@ -183,14 +183,14 @@
     <section class="mission">
       <div class="mission-content coorp content">
         <div class="text-section section">
-          <p class="title">Співпраця з Закарпатською облрадою</p>
+          <p class="title">Співпраця з Закарпатською обласною радою</p>
           <p class="description">Відповідний меморандум про співпрацю щойно підписали голова облради Володимир Чубірко та президент організації Богдан Забредовський. Сторони скомунікував депутат обласної ради Петро Станко. У документі йдеться про співпрацю у гуманітарній галузі, проведення спільних заходів, тренінгів та навчань, форумів, тощо...</p>
           <a href="https://zakarpat-rada.gov.ua/zakarpatska-oblrada-spivpratsiuvatyme-z-ho-zakhyst-suspilstva-ukrainy">
             <div class="button button-bold disable learn-button"><b>Дізнатись більше</b></div>
           </a>
         </div>
         <div class="image-section hand-section section">
-          <img class="houses" src="/images/doctor.png" alt="">
+          <img class="houses" src="/images/coorperation-gov.png" alt="">
         </div>
       </div>
     </section>
